--- a/public/index.html
+++ b/public/index.html
@@ -21,21 +21,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Importa</title>
+  <title>Importa - Importas from the world</title>
 </head>
 
 <body>
   <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
-
-  <!-- <form action="https://testpayments.nuvei.com/merchant/paymentpage" method="post">
-    <input type="hidden" name="TERMINALID" value="1064398" />
-    <input type="hidden" name="ORDERID" value="3211" />
-    <input type="hidden" name="CURRENCY" value="USD" />
-    <input type="hidden" name="AMOUNT" value="10.00" />
-    <input type="hidden" name="DATETIME" value="19-1-2021:10:43:01:673" />
-    <input type="hidden" name="HASH" value="6a25a82ae0eb626cad4b788113923ef09925cc8c65c6c2c6af9375dab021ba16a8b99f22ec65234e7df5920981f51c9e8c2538af27df8bcb9e55a628b5390d1a" />
-    <input type="submit" value="Pay Now" />
-  </form> -->
   <div id="root"></div>
   <!--
       This HTML file is a template.
