--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
   <script src="%PUBLIC_URL%/env-config.js"></script>
 
 
-<!-- Meta Pixel Code -->
+  <!-- Meta Pixel Code -->
 
-<script>
-  !function (f, b, e, v, n, t, s) {
+  <script>
+    !function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
-          n.callMethod ?
+        n.callMethod ?
           n.callMethod.apply(n, arguments) : n.queue.push(arguments)
       };
       if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
@@ -23,20 +23,30 @@
       t.src = v; s = b.getElementsByTagName(e)[0];
 
       s.parentNode.insertBefore(t, s)
-      }(window, document, 'script',
+    }(window, document, 'script',
 
       'https://connect.facebook.net/en_US/fbevents.js');
 
-      fbq('init', '475822139809162');
-      fbq('track', 'PageView');
-</script>
+    fbq('init', '475822139809162');
+    fbq('track', 'PageView');
+  </script>
 
-<noscript><img height="1" width="1" style="display:none"
+  <noscript><img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=475822139809162&ev=PageView&noscript=1" /></noscript>
 
-<!-- End Meta Pixel Code -->
+  <!-- End Meta Pixel Code -->
 
-  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-96N4HTPH1K"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-96N4HTPH1K');
+  </script>
+
+
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
