--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Imports from the world" />
+  <meta name="description" content="New Year New Sound" />
   <script src="%PUBLIC_URL%/env-config.js"></script>
   <!--
       manifest.json provides metadata used when your web app is installed on a
